# recorder

./: Cargo.toml  out_new.txt  settings.json  settings2.json  test.txt
recorder_release/config/: settings.json
src/: constants.rs  dummy.rs  main.rs  recorder.rs  utils.rs
src/adapters/: file_adapter.rs  mod.rs  tcp_adapter.rs  tcp_client_adapter.rs  tcp_proxy.rs  tcp_server_adapter.rs  udp_adapter.rs
