[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recorder"
path = "src/main.rs"

[[bin]]
name = "dummy"
path = "src/dummy.rs"

[dependencies]
bus = "2.4.1"
chrono = "0.4.38"
serde = { version="1.0.209", features = ["derive"]}
serde_json = "1.0.127"
simple-logging = "2.0.2"
socket2 = "0.5.7"
